Fix to remove horizontal scrolling on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -31,14 +36,25 @@ code {
   grid-gap: 5px;  
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-rows: repeat(2, 100px);  
+  justify-content: center;
 }
 
 #signup-card {
-  padding-top: 55px;   
+  padding-top: 55px;
+  width: -webkit-fill-available;   
   display: grid;  
-  grid-gap: 5px;  
+  grid-gap: 5px;
+  justify-content: center;  
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-rows: repeat(2, 100px);  
+}
+
+#signup-container {
+  width: -webkit-fill-available;
+}
+
+#login-container {
+  width: -webkit-fill-available;
 }
 
 #login-page {
